--- a/PlantFactoryServer/plantfactorynodered/.config.nodes.json
+++ b/PlantFactoryServer/plantfactorynodered/.config.nodes.json
@@ -608,5 +608,24 @@
                 "file": "/data/node_modules/node-red-dashboard/nodes/ui_spacer.js"
             }
         }
+    },
+    "node-red-node-mongodb": {
+        "name": "node-red-node-mongodb",
+        "version": "0.2.2",
+        "local": true,
+        "nodes": {
+            "mongo": {
+                "name": "mongo",
+                "types": [
+                    "mongodb",
+                    "mongodb out",
+                    "mongodb in"
+                ],
+                "enabled": true,
+                "local": true,
+                "module": "node-red-node-mongodb",
+                "file": "/data/node_modules/node-red-node-mongodb/66-mongodb.js"
+            }
+        }
     }
 }
