--- a/PlantFactoryServer/plantfactorynodered/package.json
+++ b/PlantFactoryServer/plantfactorynodered/package.json
@@ -4,6 +4,7 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "node-red-dashboard": "~2.23.4"
+        "node-red-dashboard": "~2.23.4",
+        "node-red-node-mongodb": "~0.2.2"
     }
 }
